Fix mobile gap, better poem, mention remix

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -64,7 +64,7 @@
 
 @media (max-width: 640px) {
   .sidebar {
-    @apply w-16;
+    @apply w-16 gap-6;
   }
 
   .sidebar img {
